fixing style import issue

--- a/style.css
+++ b/style.css
@@ -229,4 +229,4 @@ body {
 .editors .console__output .log--function {
   color: #f4b860;
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=style.css.map */
