changing log-default color

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -229,4 +229,4 @@ body {
 .editors .console__output .log--function {
   color: #f4b860;
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=main.css.map */
