--- a/assets/styles/layout/_layout.scss
+++ b/assets/styles/layout/_layout.scss
@@ -124,7 +124,7 @@
             }
 
             .log--default {
-                color: #000;
+                color: #fff;
             }
 
             .log--string {
